# alpha_crewai

./: README.md  pyproject.toml
src/alph/: crew.py  main.py
src/alph/config/: agents.yaml  tasks.yaml
