[project]
name = "alph"
version = "0.1.0"
description = "alph using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
alph = "alph.main:run"
run_crew = "alph.main:run"
train = "alph.main:train"
replay = "alph.main:replay"
test = "alph.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
